[package]
name = "morpheum-sdk-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Subscribe-only multiplex WebSocket client for the Morpheum streaming layer — real-time orderbooks, trades, price feeds, agent state, and 40+ on-chain data channels"

[lib]
crate-type = ["lib"]

[features]
default = []
serde = ["morpheum-sdk-core/serde"]
full = ["serde"]

[dependencies]
morpheum-sdk-core = { path = "../core", default-features = false, features = ["std"] }

tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
